fix the alignment of the Sobresection elements

--- a/css/components/main-description.css
+++ b/css/components/main-description.css
@@ -7,4 +7,5 @@
     margin-left: 80px;
     margin-right: 80px;
     line-height: 1.3;
+    padding-top: 30px;
 }
