--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -7,11 +7,12 @@
 }
 
 .main-section .main-title{
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 .main-section.-bgBlack{
     background-color: #000;
+    height: 520px;
 }
 
 .main-section.-bdFirst{
